1.0.10
 -Fix issue with automated analysis mode freezing on Cohort Manager/create cohorts step. (#648)
 -Fix issue with automated analysis mode ignoring halves/tertiles/quartiles selection. (#647)

1.0.9 (December 3, 2021)
 -Rename "inputs" to "predictors" in automated analysis mode.
 -Add support for observation vars as predictors in automated analysis mode. (#641)

1.0.8 (June 24, 2021)
 -Add option to create 3 clusters instead of 5. (#630)
 -Add TD/PIGD ratio calculation to ppmi.calculate_observations.py
 -Handle negative values in boxplots. (#635, #636)
 -Fix issues saving/loading cohorts with cross-sectional observation vars as predictors. (#637, #638)
 -Initial implementation of Automated Analysis mode (#283)
 -Fix cohort statistics for continuous cross-sectional observation variables used as predictors. (#642)

1.0.7 (May 19, 2021)
 -Address division by zero problem when clustering on Change/Baseline.
 -Set minimum line width for small clusters in Cohort Manager. (#628)
 -Update cluster colors when cohort changes. (#627)
 -Update initial default database with PPMI 7/13/2020 v3 dataset.

1.0.6 (May 13, 2021)
 -Add optional subsampling mechanism to spaghetti plots (#615)
 -Clear cohort selection in Cohort Manager when user updates filters. (#617)
 -Support categorical variables in Analytics Popup. (#623)
 -Support cross-sectional studies on Data Analytics page. (#625)
 -Update to Flask-JWT-Extended v4.0.0+
 -Add support for clustering to Cohort Manager (#103)

1.0.5 (May 4, 2021)
 -Track analyses and analysis panel tab changes in Data Analytics
 -Fix uneven spacing in spaghetti plots (#614)
 -Set flip_axis = 0 for STAI (#620)
 -Fix color legend label overlaps for short labels (#618)
 -Update Data Analytics Cohort Stats to support observation variables as input vars (#616)
 -Fix typo/bug in comparator cohort mini boxplots (#621)
 -Implement special-case color-coding for male/female cohorts. (#619)

1.0.4 (April 8, 2021)